plugins/kotlin/idea/tests/testData/highlighterMetaInfo/deprecation.kt.highlighting.k2
// CHECK_SYMBOL_NAMES
// HIGHLIGHTER_ATTRIBUTES_KEY
// HIGHLIGHT_WARNINGS

fun <!HIGHLIGHTING("severity='SYMBOL_TYPE_SEVERITY'; highlightingTextAttributesKey='KOTLIN_FUNCTION_DECLARATION'")!>main<!>() {
    <!HIGHLIGHTING("severity='SYMBOL_TYPE_SEVERITY'; highlightingTextAttributesKey='KOTLIN_PACKAGE_FUNCTION_CALL'"), HIGHLIGHTING("severity='WARNING'; descr='[DEPRECATION] 'fun aaa(): Unit' is deprecated. deprecated.'; highlightingTextAttributesKey='DEPRECATED_ATTRIBUTES'")!>aaa<!>()
}

<!HIGHLIGHTING("severity='SYMBOL_TYPE_SEVERITY'; highlightingTextAttributesKey='KOTLIN_ANNOTATION'")!>@Deprecated<!>("deprecated")
fun <!HIGHLIGHTING("severity='SYMBOL_TYPE_SEVERITY'; highlightingTextAttributesKey='KOTLIN_FUNCTION_DECLARATION'")!>aaa<!>(){}
